plugins {
    id 'java'
}

apply plugin: 'application'

group 'org.jdump'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}


compileJava {
    sourceCompatibility = 11
    targetCompatibility = 11
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

compileJava {
    options.compilerArgs.addAll([
            "--add-exports", "jdk.attach/sun.tools.attach=jdump"
    ])
}

application {
    mainClass.set('jdump.JDump')
    mainModule = 'jdump'
    applicationDefaultJvmArgs = [
            "--add-exports", "jdk.attach/sun.tools.attach=jdump"
    ]
}

jar {
    manifest {
        attributes(
                "Main-Class": application.mainClass.get(),
                "Implementation-Version": archiveVersion
        )
    }
}

compileTestJava {
    options.compilerArgs.addAll([ "--add-exports", "jdk.attach/sun.tools.attach=ALL-UNNAMED" ])
}

test {
    jvmArgs = [ "--add-exports", "jdk.attach/sun.tools.attach=ALL-UNNAMED" ]
    useJUnitPlatform()
}